@@ -82,6 +82,27 @@ Flowcell lane number
 
 Tag index, NULL if lane is not a pool
 
+=head2 qc_seq
+
+  data_type: 'tinyint'
+  is_nullable: 1
+
+Sequencing lane level QC outcome, a result of either manual or automatic assessment by core
+
+=head2 qc_lib
+
+  data_type: 'tinyint'
+  is_nullable: 1
+
+Library QC outcome, a result of either manual or automatic assessment by core
+
+=head2 qc
+
+  data_type: 'tinyint'
+  is_nullable: 1
+
+Overall QC assessment outcome, a logical product (conjunction) of qc_seq and qc_lib values, defaults to the qc_seq value when qc_lib is not defined
+
 =head2 tag_sequence4deplexing
 
   data_type: 'varchar'
@@ -278,6 +299,15 @@ Indexing read length, bp
   is_nullable: 1
   size: [5,2]
 
+=head2 chimeric_reads_percent
+
+  data_type: 'float'
+  extra: {unsigned => 1}
+  is_nullable: 1
+  size: [5,2]
+
+mate_mapped_defferent_chr_5 as percentage of all
+
 =head2 human_percent_mapped
 
   data_type: 'float'
@@ -349,15 +379,6 @@ Indexing read length, bp
   extra: {unsigned => 1}
   is_nullable: 1
 
-=head2 chimeric_reads_percent
-
-  data_type: 'float'
-  extra: {unsigned => 1}
-  is_nullable: 1
-  size: [5,2]
-
-mate_mapped_defferent_chr_5 as percentage of all
-
 =cut
 
 __PACKAGE__->add_columns(
@@ -391,6 +412,12 @@ __PACKAGE__->add_columns(
   },
   'tag_index',
   { data_type => 'smallint', extra => { unsigned => 1 }, is_nullable => 1 },
+  'qc_seq',
+  { data_type => 'tinyint', is_nullable => 1 },
+  'qc_lib',
+  { data_type => 'tinyint', is_nullable => 1 },
+  'qc',
+  { data_type => 'tinyint', is_nullable => 1 },
   'tag_sequence4deplexing',
   { data_type => 'varchar', is_nullable => 1, size => 30 },
   'actual_forward_read_length',
@@ -491,6 +518,13 @@ __PACKAGE__->add_columns(
   { data_type => 'float', is_nullable => 1, size => [5, 2] },
   'percent_duplicate',
   { data_type => 'float', is_nullable => 1, size => [5, 2] },
+  'chimeric_reads_percent',
+  {
+    data_type => 'float',
+    extra => { unsigned => 1 },
+    is_nullable => 1,
+    size => [5, 2],
+  },
   'human_percent_mapped',
   { data_type => 'float', is_nullable => 1, size => [5, 2] },
   'human_percent_duplicate',
@@ -538,13 +572,6 @@ __PACKAGE__->add_columns(
   },
   'verify_bam_id_snp_count',
   { data_type => 'integer', extra => { unsigned => 1 }, is_nullable => 1 },
-  'chimeric_reads_percent',
-  {
-    data_type => 'float',
-    extra => { unsigned => 1 },
-    is_nullable => 1,
-    size => [5, 2],
-  },
 );
 
 =head1 PRIMARY KEY
@@ -597,8 +624,8 @@ __PACKAGE__->belongs_to(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07036 @ 2015-09-22 11:11:38
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:+W1nODtnVbCnXmqSS1U+HQ
+# Created by DBIx::Class::Schema::Loader v0.07043 @ 2015-11-17 14:03:49
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:GMsQ4lFPiryIASbKMNScvA
 
 
 # You can replace this text with custom code or comments, and it will be preserved on regeneration
